# minfy_deployment_tool

./: .gitignore  README.md
.github/workflows/: complete-pipeline.yml
minfy-cli/: FIXING_TEST_COLLECTION_ERRORS.md  TEST_FIXES.md  fix_tests.py  pyproject.toml
minfy-cli/src/minfy/: cli.py  config.py
minfy-cli/src/minfy/commands/: auth.py  cleanup.py  config_cmd.py  deploy.py  detect.py  init.py  monitor.py  rollback.py  status.py
minfy-cli/tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_deploy.py  test_detect.py  test_init.py  test_monitor.py  test_status_rollback.py
